tools/flow9/tests/refcnt/refcnt19.flow
native println2 : io (flow) -> void = Native.println;

// TODO: fix the order of structs
Struct(value : int); 
StructContainer(s : Struct);
Tuple(s1 : Struct, i : int, s2 : Struct);

// ------------------------------------------------------------------------------------------
foo1() -> void {
	StructContainer(Struct(1));
	{}
}
// ------------------------------------------------------------------------------------------
foo2() -> void { // error
	a = Struct(1);
	b = StructContainer(a);
	a;
	println2(b);
}
// ------------------------------------------------------------------------------------------
foo3() -> void {
	a = Struct(3);
	b = StructContainer(a);
	println2(b);
}
// ------------------------------------------------------------------------------------------
makeStructContainer(a : Struct) -> StructContainer { StructContainer(a); }
foo4() -> void {
	a = Struct(1);
	b = makeStructContainer(a);
	a;
	{}
}
// ------------------------------------------------------------------------------------------
makeStruct() -> Struct {
	Struct(1);
}
foo5() -> void {
	b = StructContainer(makeStruct());
	{}
}
// ------------------------------------------------------------------------------------------
updateStruct(s : Struct) -> Struct {
	s
}
foo6() -> void {
	a = Struct(1);
	b = StructContainer(updateStruct(a));
	a;
	{}
}
// ------------------------------------------------------------------------------------------
foo7() -> Tuple {
	a = StructContainer(Struct(7));
	Tuple(a.s, 1, a.s);
}
// ------------------------------------------------------------------------------------------
main() {
	foo1();
	foo2();
	foo3();
	foo4();
	foo5();
	foo6();
	foo7();
	{}
	// std::cout<<"_____________" <<std::endl;
}
